--- a/templates/partials/admin_header.hbs
+++ b/templates/partials/admin_header.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
     <div class="container-fluid">
 
         <a class="navbar-brand" href="/">Admin Panel</a>
