--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -16,7 +16,10 @@
 
   <div class="content">
     <div class="container mt-5">
-      <h3 style="text-align: center;" class="mb-2 mt-3">Welcome , please log in!</h3>
+      <div class="text-center">
+        <h1 class="display-6">Login</h1>
+        <hr class="w-25 mx-auto">
+      </div>
       <form method="post" action="/user/login">
         <!--Email-->
         <div class="form-group mb-3">
