--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -28,19 +28,20 @@
                         <!--Name-->
                         <div class="mb-3">
                             <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="name" name="name">
+                            <input type="text" class="form-control" id="name" name="name" placeholder="John Doe">
                         </div>
 
                         <!--Email-->
                         <div class="form-group">
                             <label for="email">Email: </label>
-                            <input type="text" class="form-control" placeholder="email" name="email" id="email" />
+                            <input type="text" class="form-control" name="email" id="email"
+                                placeholder="example@domain.com" />
                         </div>
 
                         <!--Phone no-->
                         <div class="mb-3">
                             <label for="phone_no" class="form-label">Phone no:</label>
-                            <input type="text" class="form-control" id="phone_no" name="phone_no">
+                            <input type="text" class="form-control" id="phone_no" name="phone_no" placeholder="+91">
                         </div>
 
                         <!--Gender-->
@@ -81,7 +82,7 @@
                         <!--Address-->
                         <div class="form-group mb-3 ">
                             <label for="address">Address: </label>
-                            <textarea name="address" id="address" placeholder="enter address here.." maxlength="200"
+                            <textarea name="address" id="address" placeholder="Write address here.." maxlength="200"
                                 rows="5" class="form-control"></textarea>
                         </div>
 
