--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
+<nav class="navbar navbar-dark  navbar-expand-lg fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">DriveOnRent</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -19,11 +19,11 @@
                         <li><a class="dropdown-item" href="/admin/">Admin Panel</a></li>
                     </ul>
                 </li>
-                <li><a class="nav-link" href="#about">About us</a></li>
-                <li><a class="nav-link" href="#contact">Contact us</a></li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/item-list">Products</a>
+                    <a class="nav-link" href="/user/item-list">Prices</a>
                 </li>
+                <li><a class="nav-link" href="#about">About</a></li>
+                <li><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
 
             <!-- Wrap the last two items in a div with "ms-auto" class to align them at the end -->
