--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,55 +14,23 @@
     {{>header}}
     {{>alert_response}}
 
-    <!-- slide show -->
-    <header>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+    <header class="custom-header">
+        <div class="left-side">
+            <img src="imgs/e2.png" alt="Vector Image" class="img-fluid">
+        </div>
+        <div class="right-side">
+            <h1>We provide <br>
+                <span>the Best Cars</span>
+                <br>
+                for you
+            </h1>
+            <p>Find your perfect ride at DriveOnRent. offering a diverse range
+                of vehicles with an <br /> ensuring exceptional and personalized travel.
+            </p>
+            <div class="my-5">
+                <a href="user/item-list"><button type="button" class="btn btn-outline-secondary price-btn">Get
+                        Started</button></a>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./imgs/v1.png" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <h5>Discover the joy of open roads with DriveOnRent</h5>
-                        <p>your ultimate car rental solution, offering a diverse range of vehicles to cater to all your
-                            travel needs</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./imgs/v2.png" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <h5>Embrace wanderlust with our top-quality rental vehicles</h5>
-                        <p>Our top-quality rental vehicles are carefully selected to cater to your adventurous spirit,
-                            ensuring you can fully embrace wanderlust and enjoy seamless and exciting travel
-                            experiences.
-                        </p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./imgs/v27.png" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <h5>Find your perfect ride at DriveOnRent</h5>
-                        <p>with an extensive selection from sleek compacts to luxurious SUVs, ensuring exceptional and
-                            personalized travel.</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
     </header>
 
@@ -77,7 +45,7 @@
             <div class="row my-5">
                 <div class="col-lg-6 col-md-6 col-12">
                     <figure>
-                        <img src="imgs/v3.jpg" class="img-fluid about_img" alt="about image">
+                        <img src="imgs/a7.jpg" class="img-fluid about_img" alt="about image">
                     </figure>
                 </div>
 
@@ -112,7 +80,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row">
                             <div class="col-md-4">
-                                <img src="imgs/v12.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="imgs/a55.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -130,7 +98,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row">
                             <div class="col-md-4">
-                                <img src="imgs/v18.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="imgs/a8.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -148,7 +116,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row">
                             <div class="col-md-4">
-                                <img src="imgs/v16.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="imgs/a3.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -163,7 +131,7 @@
                 </div>
 
                 <div class="col-xxl-12 text-center my-5">
-                    <a href="user/item-list"><button type="button" class="btn btn-outline-primary">Products</button></a>
+                    <a href="user/item-list"><button type="button" class="btn btn-outline-primary">Prices</button></a>
                 </div>
             </div>
         </div>
@@ -172,7 +140,7 @@
     <!-- contact us -->
     <section class="main_heading my-5 pt-5" id="contact">
         <div class="text-center">
-            <h1 class="display-5">Get in Touch</h1>
+            <h1 class="display-5">Contact</h1>
             <hr class="w-25 mx-auto">
         </div>
 
@@ -193,11 +161,11 @@
                         <div class="mb-3">
                             <label for="description" class="form-label">Description</label>
                             <textarea class="form-control" id="description" name="description"
-                                placeholder="enter description here..." rows="5"></textarea>
+                                placeholder="Write message here..." rows="5"></textarea>
                         </div>
                         <input type="hidden" name="Renderpage" value="index">
-                        <input class="btn btn-success btn-block form-control" type="submit" name="btn_feedback"
-                            value="Send">
+                        <input class="btn btn-success btn-block form-control " type="submit" name="btn_feedback"
+                            style="background: ;" value="Send">
                     </form>
                 </div>
             </div>
