--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -24,13 +24,14 @@
         <!--Email-->
         <div class="form-group mb-3">
           <label for="name">Email: </label>
-          <input type="email" class="form-control" placeholder="email" name="email" required />
+          <input type="email" class="form-control" placeholder="email" name="email" required
+            value="johndoetest@yopmail.com" />
         </div>
 
         <!--Password-->
         <div class="form-group mb-3">
           <label for="name">Password: </label>
-          <input type="text" class="form-control" placeholder="password" name="password" required />
+          <input type="text" class="form-control" placeholder="password" name="password" required value="Test@123" />
         </div>
 
         <!--Render page-->
