--- a/templates/views/products.hbs
+++ b/templates/views/products.hbs
@@ -16,11 +16,11 @@
     <!-- products -->
     <section class="main_heading my-5 py-3 container-fluid" id="products">
         <div class="text-center">
-            <h1 class="display-6"> Products </h1>
+            <h1 class="display-6"> Prices </h1>
             <hr class="w-25 mx-auto">
         </div>
 
-        <div class="row row-cols-2 row-cols-md-6 g-4">
+        <div class="row row-cols-2 row-cols-md-4 g-4">
             {{#each result}}
 
             <div class="col">
