--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -121,8 +121,8 @@
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">Long-Term Leasing</h5>
-                                    <p class="card-text">Offer long-term leasing options for customers who need a
-                                        vehicle for an extended period, such as a few months or even years.</p>
+                                    <p class="card-text">Offer long-term options for customers who need a
+                                        vehicle for an extended period.</p>
                                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                 </div>
                             </div>
